--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.1.0",
     "next": "9.5.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sequelize": "^6.3.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.4.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "typescript": "^3.9.7"
